src/objects/Epic__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Effort__c</fullName>
        <label>Actual Effort</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgilePro_Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>This is the primary Status of the Field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Design</fullName>
                </value>
                <value>
                    <fullName>In Build</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Test Ok</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Build In Progress</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pending Release</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ready for Test</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Triaged</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Backlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Build_Completion_Date__c</fullName>
        <label>Build Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Notes__c</fullName>
        <label>Build Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Percent__c</fullName>
        <label>Completed %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IMAGE(&apos;/resource/2F0811N000002HJPa/blue&apos;, &apos;Test&apos;, 10, ( Completed_Percent__c * 100 )) &amp;
IMAGE(&apos;/resource/2F0811N000002HJPV/border&apos;, &apos;Test&apos;, 10, (100 - Completed_Percent__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (Completed_Percent__c * 100) &amp;
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <label>Completed %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependency__c</fullName>
        <label>Dependency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Epic_Description__c</fullName>
        <description>Description of the Epic</description>
        <label>Epic Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Epic_Reference__c</fullName>
        <label>Epic Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <label>Planned Effort (Person Days)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <label>Level 0</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>Good to Have</fullName>
                </value>
                <value>
                    <fullName>Nice to Have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <formula>IF((Due_Date__c - NOW())  &lt;=  1, IMAGE(&quot;/resource/1527244767000/AGP__Red_square?isdtp=p1&quot;,&quot;red&quot;), 
IF((Due_Date__c - NOW()) &gt; 5, IMAGE(&quot;/resource/1527244767000/AGP__Green_square?isdtp=p1&quot;,&quot;green&quot;),
IMAGE(&quot;/resource/1527244767000/AGP__Amber?isdtp=p1&quot;,&quot;amber&quot;) 

) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_ID__c</fullName>
        <label>Epic ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>AGP_Sprint__c</referenceTo>
        <relationshipLabel>Epic</relationshipLabel>
        <relationshipName>Epic</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requirement_ID__c</columns>
        <columns>Level_0__c</columns>
        <columns>Level_1__c</columns>
        <columns>Completed_Percent__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epic</pluralLabel>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <description>Functionality request from the user</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>